# bluessh

./: .gitignore  PROJECT_STATUS.md  README.md  features.md
.github/workflows/: android.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bluessh/: BlueSSHApplication.kt
android/app/src/main/java/com/bluessh/core/: KeyManager.kt  KnownHostsVerifier.kt  SessionManager.kt  SftpClientManager.kt  SshEngine.kt
android/app/src/main/java/com/bluessh/models/: Models.kt
android/app/src/main/java/com/bluessh/services/: SshSessionService.kt
android/app/src/main/java/com/bluessh/ui/: MainActivity.kt  TerminalActivity.kt
android/app/src/main/java/com/bluessh/utils/: KeyStoreManager.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
desktop/: CMakeLists.txt
desktop/src/: main.cpp
desktop/src/core/: CompressionManager.h  KeyManager.cpp  KeyManager.h  KnownHosts.cpp  KnownHosts.h  PortForwarding.h  RecordingManager.h  SessionManager.h  SftpClient.cpp  SftpClient.h  SshEngine.cpp  SshEngine.h  SshSession.cpp  SshSession.h
desktop/src/core/auth/: GssapiAuth.h
desktop/src/core/forwarding/: DynamicForwarding.h  RdpBridge.h  StaticForwarding.h
desktop/src/core/network/: Ipv6Connectivity.cpp  Ipv6Connectivity.h
desktop/src/core/session/: AutoReconnect.cpp  AutoReconnect.h  MultiTerminalManager.cpp  MultiTerminalManager.h
desktop/src/core/terminal/: TerminalEmulator.cpp  TerminalEmulator.h
desktop/src/portable/: PortableLauncher.cpp  PortableLauncher.h
desktop/src/profile/: BvcProfile.h
desktop/src/ui/: MainWindow.h  SftpWidget.h  TerminalWidget.h
docs/: ARCHITECTURE.md  BUILD.md  CLI_TOOLS.md  COMPLETE_ARCHITECTURE.md  CONNECTIVITY_TEST_REPORT.md  DEPLOYMENT.md  ENGINE_MODULE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  SSH_TROUBLESHOOTING.md  SSH_TROUBLESHOOTING_GUIDE.md  TECH_STACK_DIAGRAM.md  TEST_REPORT.md
engine/: Cargo.toml
engine/src/: keygen.rs  known_hosts.rs  lib.rs  runtime.rs  sftp.rs  ssh_session.rs  tests.rs  totp.rs
installer/linux/: control
installer/windows/: product.wxs
scripts/: automate_test_fix.py  build_android.sh  build_desktop_linux.sh  build_desktop_windows.bat  build_ubuntu.sh  build_windows.bat  build_windows.sh  vps_fix_all.sh
scripts/reports/: report-20260401-060503.md  report-20260401-060743.md
scripts/watchdog/: WATCHDOG.md  watch_ubuntu.sh  watch_windows.ps1  watchdog.conf  watchdog.conf.ps1
scripts/watchdog/patterns/: linux.patterns  windows.patterns.ps1
ui/: .metadata  README.md  pubspec.yaml
ui/android/app/: build.gradle.kts  proguard-rules.pro
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/bluessh/bluessh/: EngineBridge.kt  MainActivity.kt
ui/android/app/src/main/res/values/: styles.xml
ui/android/app/src/main/res/xml/: network_security_config.xml
ui/lib/: main.dart
ui/lib/models/: host_profile.dart  port_forward.dart  session_state.dart  terminal_tab.dart
ui/lib/screens/: file_manager_screen.dart  forwarding_screen.dart  home_screen.dart  multi_terminal_screen.dart  recording_playback_screen.dart  remote_desktop_screen.dart  settings_screen.dart  terminal_screen.dart
ui/lib/services/: credential_service.dart  engine_bridge.dart  permission_service.dart  recording_service.dart  session_service.dart  tab_manager.dart  update_service.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/test/: all_features_test.dart
