[package]
name = "bluessh-engine"
version = "0.1.0"
edition = "2021"
description = "BlueSSH core networking engine — SSH, SFTP, VNC, RDP"
license = "MIT"

[lib]
name = "bluessh"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH protocol
russh = "0.58"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Memory safety
zeroize = { version = "1", features = ["derive"] }

# JNI (Android only)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
