[package]
name = "bluessh-engine"
version = "0.1.0"
edition = "2021"
description = "BlueSSH core networking engine — SSH, SFTP, VNC, RDP"
license = "MIT"

[lib]
name = "bluessh"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH protocol
russh = "0.58"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Memory safety
zeroize = { version = "1", features = ["derive"] }

# SSH key generation
ssh-key = { version = "0.6", features = ["ed25519", "ecdsa", "alloc"] }

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# TOTP for MFA
totp-rs = "5"

# Random number generation
rand = "0.8"

# Error handling
anyhow = "1"

# JNI (Android only)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
